--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "eslint-config-next": "14.0.1",
     "lucide-react": "^0.263.0",
     "next": "14.0.1",
+    "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
     "postcss": "8.4.31",
     "react": "18.2.0",
