--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.2",
     "react-icons": "^4.11.0",
+    "react-typed": "^2.0.12",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.6",
