--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# ------------------- FRONTEND IGNORES -------------------
 # dependencies
 client/node_modules
 client/.pnp
@@ -30,3 +31,20 @@ client/.vercel
 
 # typescript
 client/*.tsbuildinfo
+
+# ------------------- BACKEND IGNORES -------------------
+# Binaries for programs and plugins
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+
+# Test binary, built with `go test -c`
+*.test
+
+# Output of the go coverage tool, specifically when used with LiteIDE
+*.out
+
+# Go workspace file
+go.work
