--- a/server/Makefile
+++ b/server/Makefile
@@ -6,9 +6,11 @@ setup:
 	@go mod init $(PROJECT_NAME)
 	@echo "[*] Getting dependencies..."
 	@go get -u github.com/gin-gonic/gin
-	@go get github.com/supabase/supabase-go
+	@go get github.com/nedpals/supabase-go
 	@go get -u gorm.io/gorm
 	@go get -u gorm.io/driver/postgres
+	@go get github.com/joho/godotenv
+	@go get github.com/google/uuid
 
 .PHONY: setup
 
